# wool

./: .gitignore  LICENSE  README.md  TESTGUIDE.md  WHITEPAPER.md  gemini-feedback.md  pyproject.toml
.github/: .githubrc  .gitignore  pull_request_template.md
build-hooks/: _git.py  (+3 more)
wool/: .coveragerc  README.md  pyproject.toml
wool-locking/: README.md  pyproject.toml
wool-locking/src/wool/locking/: __init__.py  _cli.py  _client.py  _lock.py  _pool.py  _session.py  _worker.py
wool-locking/tests/: test_public.py
wool/proto/: task.proto  wire.proto  worker.proto
wool/protobuf/: task.proto  worker.proto
wool/protobuf/_mempool/: _mempool.proto
wool/protobuf/_mempool/_metadata/: _metadata.proto
wool/protobuf/mempool/: mempool.proto  metadata.proto  service.proto
wool/protobuf/mempool/metadata/: metadata.proto
wool/protobuf/worker/: service.proto
wool/src/wool/: __init__.py  _cli.py  _client.py  _connection.py  _context.py  _event.py  _future.py  _loadbalancer.py  _logging.py  _manager.py  _pool.py  _queue.py  _resource_pool.py  _session.py  _task.py  _typing.py  _undefined.py  _utils.py  _work.py  _worker.py  _worker_discovery.py  _worker_pool.py  _worker_proxy.py  _worker_service.py  exceptions.py
wool/src/wool/_mempool/: __init__.py  _client.py  _mempool.py  _metadata.py  _service.py  _session.py
wool/src/wool/_mempool/_metadata/: __init__.py
wool/src/wool/_protobuf/: __init__.py  task.py  worker.py
wool/src/wool/_worker/: _service.py
wool/src/wool/core/: context.py  resourcepool.py  typing.py
wool/src/wool/core/discovery/: base.py  lan.py  local.py
wool/src/wool/core/loadbalancer/: base.py  roundrobin.py
wool/src/wool/core/protobuf/: task.py  worker.py
wool/src/wool/core/work/: __init__.py  task.py  wrapper.py
wool/src/wool/core/worker/: base.py  connection.py  local.py  pool.py  process.py  proxy.py  service.py
wool/src/wool/mempool/: _mempool.py
wool/src/wool/protocol/: __init__.py  _wire.py  exception.py  exceptions.py  frame.py  task.py  worker.py
wool/src/wool/runtime/: cache.py  context.py  event.py  resourcepool.py  serializer.py  typing.py
wool/src/wool/runtime/context/: README.md  __init__.py  base.py  chain.py  errors.py  exceptions.py  factory.py  guard.py  manifest.py  registry.py  runtime.py  snapshot.py  stub.py  threading.py  token.py  var.py  wire.py
wool/src/wool/runtime/discovery/: README.md  __init__.py  base.py  exceptions.py  lan.py  local.py  pool.py
wool/src/wool/runtime/loadbalancer/: README.md  base.py  roundrobin.py
wool/src/wool/runtime/protobuf/: README.md  __init__.py  task.py  worker.py
wool/src/wool/runtime/routine/: README.md  interceptor.py  task.py  wrapper.py
wool/src/wool/runtime/work/: __init__.py  interceptor.py  task.py  wrapper.py
wool/src/wool/runtime/worker/: README.md  auth.py  base.py  connection.py  exceptions.py  frame.py  interceptor.py  local.py  metadata.py  namespace.py  pool.py  process.py  proxy.py  service.py  session.py
wool/src/wool/utilities/: afilter.py  fanout.py  noreentry.py
wool/tests/: conftest.py  dependencies.py  helpers.py  test_connection.py  test_exception.py  test_exceptions.py  test_loadbalancer.py  test_mempool.py  test_public.py  test_resource_pool.py  test_work.py  test_worker.py  test_worker_discovery.py  test_worker_discovery_integration.py  test_worker_pool.py  test_worker_proxy.py  test_worker_service.py
wool/tests/_mempool/: conftest.py  test_client.py  test_mempool.py  test_service.py
wool/tests/core/: test_context.py  test_resourcepool.py
wool/tests/core/discovery/: test_base.py  test_lan.py  test_local.py
wool/tests/core/loadbalancer/: conftest.py  test_base.py  test_roundrobin.py
wool/tests/core/work/: __init__.py  conftest.py  test_task.py  test_wrapper.py
wool/tests/core/worker/: __init__.py  conftest.py  test_base.py  test_connection.py  test_local.py  test_pool.py  test_process.py  test_proxy.py  test_service.py
wool/tests/integration/: _collision_fixtures.py  _token_ops.py  conftest.py  routines.py  test_admission_gate.py  test_context_var_propagation.py  test_identity_mtls.py  test_integration.py  test_lan_publish.py  test_local_discovery_capacity.py  test_local_discovery_lock_timeout.py  test_local_discovery_readd.py  test_local_discovery_teardown.py  test_pool_composition.py  test_scenario.py  test_token_ops_model.py  test_token_parity_caller_mints.py  test_token_parity_errors.py  test_token_parity_multivar.py  test_token_parity_oracle.py  test_token_parity_oracle_pools.py  test_token_parity_streaming.py  test_token_parity_worker_mints.py  test_unified_driver.py  test_worker_idle.py  test_worker_shutdown.py  test_worker_update.py
wool/tests/protocol/: test___init__.py  test_frame.py  test_version_floors.py  test_wire.py
wool/tests/runtime/: conftest.py  test_cache.py  test_context.py  test_event.py  test_resourcepool.py  test_serializer.py
wool/tests/runtime/context/: conftest.py  test_base.py  test_chain.py  test_exceptions.py  test_factory.py  test_guard.py  test_manifest.py  test_registry.py  test_runtime.py  test_snapshot.py  test_token.py  test_var.py
wool/tests/runtime/discovery/: conftest.py  test_base.py  test_lan.py  test_local.py  test_pool.py
wool/tests/runtime/loadbalancer/: conftest.py  test_base.py  test_roundrobin.py
wool/tests/runtime/routine/: conftest.py  test_interceptor.py  test_task.py  test_wrapper.py
wool/tests/runtime/work/: __init__.py  conftest.py  test_interceptor.py  test_task.py  test_wrapper.py
wool/tests/runtime/worker/: __init__.py  conftest.py  test_auth.py  test_backpressure.py  test_base.py  test_connection.py  test_frame.py  test_interceptor.py  test_local.py  test_namespace.py  test_pool.py  test_process.py  test_proxy.py  test_service.py  test_session.py
wool/tests/seeds/test_mempool/mempool/L6uV79bd3vZq3ZaUSGqFm3/: dump  meta
wool/tests/stdlib_parity/: conftest.py  test_async_gen_aclose.py  test_context_parity.py  test_executor_offload.py  test_loop_callbacks.py  test_task_creation.py
wool/tests/utilities/: test_afilter.py  test_fanout.py  test_noreentry.py
(+73 files in other folders)
