[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wool"
version = "0.0.0"
description = "A Python framework for distributed multiprocessing."
authors = [{ name = "Conrad Bzura", email = "conrad@wool.io" }]
dependencies = ["click", "debugpy"]
maintainers = [{ email = "maintainers@wool.io" }]
readme = ""
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
wool = "wool._cli:cli"

[tool.ruff]
line-length = 79

[tool.ruff.lint.isort]
known-first-party = ["wool"]
