[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8"]

[project]
name = "wool"
version = "0.0.0"
description = "A Python framework for distributed multiprocessing."
authors = [{ name = "Conrad Bzura", email = "conrad@wool.io" }]
dependencies = ["annotated-types", "click", "debugpy"]
maintainers = [{ email = "maintainers@wool.io" }]
readme = ""
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
wool = "wool._cli:cli"

[tool.ruff]
line-length = 79

[tool.ruff.lint.isort]
known-first-party = ["wool"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
version_scheme = "release-branch-semver"
