[build-system]
build-backend = "hatchling.build"
requires = ["debugpy", "hatchling", "packaging", "GitPython", "toml"]

[project]
authors = [{ name = "Conrad Bzura", email = "conrad@wool.io" }]
classifiers = ["Intended Audience :: Developers"]
dependencies = ["click", "wool"]
description = "A Wool plugin for distributed locking."
dynamic = ["version"]
license = { file = "../LICENSE" }
maintainers = [{ email = "maintainers@wool.io" }]
name = "wool-locking"
readme = "README.md"
requires-python = ">=3.10"

[project.entry-points.wool_cli_plugins]
locking = "wool.locking._cli"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.sdist]
sources = ["src"]
include = ["wool"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
include = ["wool"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "../build-hooks/build.py"

[tool.hatch.metadata.hooks.custom]
path = "../build-hooks/metadata.py"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["wool"]
