[build-system]
build-backend = "hatchling.build"
requires = ["debugpy", "hatchling", "packaging", "GitPython", "toml"]

[project]
authors = [{ name = "Conrad Bzura", email = "conrad@wool.io" }]
classifiers = ["Intended Audience :: Developers"]
dependencies = [
    "annotated-types",
    "click",
    "debugpy",
    "grpcio",
    "protobuf",
    "shortuuid",
    "tblib",
    "typing-extensions",
]
description = "A Python framework for distributed multiprocessing."
dynamic = ["version"]
license = { file = "../LICENSE" }
maintainers = [{ email = "maintainers@wool.io" }]
name = "wool"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-grpc-aio~=0.2.0", "ruff"]
locking = ["wool-locking"]

[project.scripts]
wool = "wool._cli:cli"

[tool.hatch.build.hooks.protobuf]
dependencies = ["hatch-protobuf"]
generate_grpc = true
generate_pyi = true
output_path = "src/wool/_protobuf"
proto_paths = ["protobuf"]

[tool.hatch.build.targets.sdist]
sources = ["src"]
include = ["wool"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
include = ["wool"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "../build-hooks/build.py"

[tool.hatch.metadata.hooks.custom]
path = "../build-hooks/metadata.py"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
known-first-party = ["wool"]
