[build-system]

build-backend = "hatchling.build"
requires = [
    "debugpy",
    "hatchling",
    "packaging",
    "gitpython",
    "toml",
    "typing-extensions",
]

[project]
authors = [{ name = "Conrad Bzura", email = "conrad@wool.io" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "cloudpickle",
    "grpcio>=1.76.0,<2",
    "packaging",
    "portalocker",
    "protobuf>=6.31.1,<7",
    "shortuuid",
    "tblib",
    "typing-extensions",
    "watchdog",
    "zeroconf",
]
description = "A distributed Python runtime"
dynamic = ["version"]
license = { file = "../LICENSE" }
maintainers = [{ email = "maintainers@wool.io" }]
name = "wool"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "allpairspy",
    "cryptography",
    "debugpy",
    "hypothesis",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-grpc-aio~=0.3.0",
    "pytest-mock",
    "ruff",
]

[project.scripts]
wool = "wool.cli:cli"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.hooks.protobuf]
# Pin the codegen toolchain so it is the single source of version truth. The
# generated stubs embed hard runtime assertions (GRPC_GENERATED_VERSION and
# ValidateProtobufRuntimeVersion) against the grpcio-tools/protoc used at build
# time, so this pin must stay in lockstep with the grpcio/protobuf floors
# declared in [project].dependencies. grpcio-tools 1.76.0 generates code
# requiring grpcio>=1.76.0 and protobuf>=6.31.1. The stub-floor-guard CI job
# fails if these drift apart.
dependencies = ["hatch-protobuf", "grpcio-tools==1.76.0"]
generate_grpc = true
generate_pyi = true
output_path = "src/wool/protocol"
proto_paths = ["proto"]

[tool.hatch.build.targets.sdist]
include = ["wool"]

[tool.hatch.build.targets.wheel]
include = ["wool"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "../build-hooks/build.py"

[tool.hatch.metadata.hooks.custom]
path = "../build-hooks/metadata.py"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov --cov-config=.coveragerc"
pythonpath = ["."]
markers = [
    "integration: end-to-end integration tests against real WorkerPool",
]

[tool.ruff]
line-length = 89
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = false
force-single-line = true
known-first-party = ["wool"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
include = ["src"]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "tests/*",
    "src/wool/protocol/*pb2*",
]
reportMissingImports = true
reportMissingTypeStubs = false
